Keep scroll timer when user press on scrollbar button.

Currently, we stop the scroll timer when scrollbar reach the begin
or end of track. This breaks the scrolling on infinite scrolling page
since infinite scrolling page will load new content when scrollbar
reach the end of track.

In this patch, we keep the scroll timer for user press on scrollbar
button.

Bug: 852799
Change-Id: I16b06a5e3683f01164b4e12e364ea732d73cfd22
Reviewed-on: https://chromium-review.googlesource.com/1127144
Reviewed-by: David Bokan <bokan@chromium.org>
Commit-Queue: Jianpeng Chao <chaopeng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572977}
Former-commit-id: 1d11bdee18c8696f31c0fe01c27fa926b71d2f34