third_party/blink/renderer/platform/scroll/scrollbar.cc
@@ -173,6 +173,9 @@ bool Scrollbar::ThumbWillBeUnderMouse() const {
 }
 
 void Scrollbar::AutoscrollPressedPart(double delay) {
+  if (!scrollable_area_)
+    return;
+
   // Don't do anything for the thumb or if nothing was pressed.
   if (pressed_part_ == kThumbPart || pressed_part_ == kNoPart)
     return;
@@ -185,12 +188,27 @@ void Scrollbar::AutoscrollPressedPart(double delay) {
   }
 
   // Handle the arrows and track.
-  if (scrollable_area_ &&
+  bool did_scroll =
       scrollable_area_
           ->UserScroll(PressedPartScrollGranularity(),
                        ToScrollDelta(PressedPartScrollDirectionPhysical(), 1))
-          .DidScroll())
+          .DidScroll();
+
+  // Always start timer when user press on button since scrollable area maybe
+  // infinite scrolling.
+  if (pressed_part_ == kBackButtonStartPart ||
+      pressed_part_ == kForwardButtonStartPart ||
+      pressed_part_ == kBackButtonEndPart ||
+      pressed_part_ == kForwardButtonEndPart) {
     StartTimerIfNeeded(delay);
+    return;
+  }
+
+  if ((pressed_part_ == kBackTrackPart || pressed_part_ == kForwardTrackPart) &&
+      did_scroll) {
+    StartTimerIfNeeded(delay);
+    return;
+  }
 }
 
 void Scrollbar::StartTimerIfNeeded(double delay) {
@@ -204,16 +222,6 @@ void Scrollbar::StartTimerIfNeeded(double delay) {
       ThumbWillBeUnderMouse()) {
     SetHoveredPart(kThumbPart);
     return;
-  }
-
-  // We can't scroll if we've hit the beginning or end.
-  ScrollDirectionPhysical dir = PressedPartScrollDirectionPhysical();
-  if (dir == kScrollUp || dir == kScrollLeft) {
-    if (current_pos_ == 0)
-      return;
-  } else {
-    if (current_pos_ == Maximum())
-      return;
   }
 
   scroll_timer_.StartOneShot(delay, FROM_HERE);
